Tests/Positive/BreakAndContinue.mr
fun main(): i32 {
    for var i: i32, i < 10, i += 1 {
        if i == 5 {
            continue;
        }
        if i == 7 {
            break;
        }
        echo i; echo '\n';
    }
    return 0;
}

/* output:
 * 0
 * 1
 * 2
 * 3
 * 4
 * 6
*/