Tests/Negative/LogicalNotOnNumber.mr
fun main(): i32 {
    var x: i32 = 10;
    if !x {         // Error: '!' operator requires bool
        return 1;
    }
    return 0;
}
